tests/e2e/arg_name_shorthand_error8.error
Error: syntax error in story at line 1, column 23

1|    random integer low:1 :2
                            ^

E0118: Service `random` requires arguments to be named
